--- a/src/global-styles/globals.css
+++ b/src/global-styles/globals.css
@@ -1,9 +1,18 @@
+.wrapper {
+    max-width: 100%;
+    width: 1400px;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+
 html,
 body {
     padding: 0;
     margin: 0;
     font-family: Montserrat, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
