--- a/src/frontend/components/consumers/ProductList/ProductList.module.scss
+++ b/src/frontend/components/consumers/ProductList/ProductList.module.scss
@@ -1,6 +1,18 @@
+@import '../../../../styles/responsive';
+@import '../../../../styles/mixins';
+
 .productList {
-  background-color: #EDF2EE;
-  padding: 20px 0 50px;
+  padding: 40px 0;
+  text-align: center;
+
+  .title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+    @include lg-min {
+      font-size: 2.2rem;
+    }
+  }
 
   .list {
     display: flex;
@@ -9,12 +21,9 @@
     justify-content: center;
   }
 
-  .title {
-    font-size: 30px;
-    color: #1E6091;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 30px;
+  .navigation {
+    font-size: 1.2rem;
+    padding-top: 20px;
   }
 }
 
