--- a/src/global-styles/globals.css
+++ b/src/global-styles/globals.css
@@ -1,11 +1,3 @@
-.wrapper {
-    max-width: 100%;
-    width: 1400px;
-    margin: 0 auto;
-    padding: 0 40px;
-}
-
-
 html,
 body {
     padding: 0;
@@ -56,6 +48,7 @@ img {
 input,
 textarea {
     -webkit-user-select: auto;
+    user-select: auto;
 }
 
 textarea {
@@ -80,7 +73,9 @@ meter {
     -webkit-user-modify: read-write;
     overflow-wrap: break-word;
     -webkit-line-break: after-white-space;
+    line-break: after-white-space;
     -webkit-user-select: auto;
+    user-select: auto;
 }
 
 :where([draggable='true']) {
