--- a/src/frontend/components/consumers/Banner/Banner.module.scss
+++ b/src/frontend/components/consumers/Banner/Banner.module.scss
@@ -1,13 +1,13 @@
 @import '../../../../styles/responsive';
 @import '../../../../styles/mixins';
+@import '../../../../styles/variables';
 
 .banner {
-  background-color: #EDF2EE;
-  
+  background-color: $bg-color;
+
   .wrapper {
-    display: flex;
-    align-items: center;
-    padding: 40px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     @include wrapper;
     @include lg-min {
@@ -22,19 +22,24 @@
         display: block;
         object-fit: cover;
         height: 300px;
+        width: fit-content;
       }
       @include xl-min {
         height: 450px;
       }
     }
-  
+
     .information {
-      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 49px;
+      margin-top: 33px;
+
       .bannerTitle {
-        font-weight: 600;
-        font-size: 2rem;
-        color: #002603;
-        margin-bottom: 20px;
+        color: $text-color;
+        font-size: 32px;
+        font-weight: 400;
         @include md-min {
           font-size: 3rem;
         }
@@ -45,16 +50,18 @@
           font-size: 3.5rem;
         }
       }
-  
+
       .button {
         background-color: transparent;
         border-radius: 40px;
-        border: 2px solid #000;
-        color: #000;
+        border: 2px solid $text-color;
+        color: $text-color;
         font-weight: 600;
         padding: 8px 20px;
+        margin-top: 24px;
+
         &:hover {
-         background-color: #00B207;
+          background-color: #00B207;
         }
       }
     }
