--- a/src/frontend/components/consumers/Banner/Banner.module.css
+++ b/src/frontend/components/consumers/Banner/Banner.module.css
@@ -1,29 +1,75 @@
 .banner {
+  background-color: #D9D9D9;
+}
+.banner .wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1400px;
+  width: 90%;
+}
+@media screen and (min-width: 768px) {
+  .banner .wrapper {
+    gap: 40px;
+    padding: 60px 0;
+  }
+}
+.banner .wrapper .image {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .banner .wrapper .image {
+    flex: 1;
+    display: block;
+    object-fit: cover;
+    height: 300px;
+    width: fit-content;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .banner .wrapper .image {
+    height: 450px;
+  }
+}
+.banner .wrapper .information {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 40px;
-  margin-bottom: 100px;
-  margin-top: 50px;
+  margin-bottom: 49px;
+  margin-top: 33px;
 }
-.banner .information .bannerTitle {
+.banner .wrapper .information .bannerTitle {
+  color: #000;
+  font-size: 32px;
+  font-weight: 400;
+}
+@media screen and (min-width: 576px) {
+  .banner .wrapper .information .bannerTitle {
+    font-size: 3rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .banner .wrapper .information .bannerTitle {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .banner .wrapper .information .bannerTitle {
+    font-size: 3.5rem;
+  }
+}
+.banner .wrapper .information .button {
+  background-color: transparent;
+  border-radius: 40px;
+  border: 2px solid #000;
+  color: #000;
   font-weight: 600;
-  font-size: 56px;
-  color: #002603;
-  margin-bottom: 20px;
+  padding: 8px 20px;
+  margin-top: 24px;
 }
-.banner .information .bannerDescription {
-  font-size: 18px;
-  color: #618062;
-  margin-bottom: 32px;
-}
-.banner .information .button {
-  padding: 16px 40px;
+.banner .wrapper .information .button:hover {
   background-color: #00B207;
-  color: white;
-  border-radius: 43px;
-}
-.banner .information .button:hover {
-  background-color: #2C742F;
 }
 
 /*# sourceMappingURL=Banner.module.css.map */
