--- a/src/frontend/components/consumers/ProductList/ProductList.module.css
+++ b/src/frontend/components/consumers/ProductList/ProductList.module.css
@@ -1,19 +1,36 @@
 .productList {
-  background-color: #EDF2EE;
-  padding: 20px 0 50px;
+  padding: 40px 0;
+  text-align: center;
+}
+.productList .title {
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .productList .title {
+    font-size: 2.2rem;
+  }
 }
 .productList .list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 5px;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
+  max-width: 1400px;
+  width: 90%;
 }
-.productList .title {
-  font-size: 30px;
-  color: #1E6091;
-  font-weight: 600;
-  text-align: center;
-  margin-bottom: 30px;
+@media screen and (min-width: 576px) {
+  .productList .list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.productList .navigation {
+  font-size: 1.2rem;
+  padding-top: 20px;
 }
 
 /*# sourceMappingURL=ProductList.module.css.map */
