--- a/src/frontend/components/consumers/ProductList/ProductList.module.scss
+++ b/src/frontend/components/consumers/ProductList/ProductList.module.scss
@@ -1,13 +1,15 @@
 @import '../../../../styles/responsive';
 @import '../../../../styles/mixins';
+@import '../../../../styles/variables';
 
 .productList {
   padding: 40px 0;
   text-align: center;
 
   .title {
-    font-size: 1.5rem;
-    font-weight: 600;
+    color: $text-color;
+    font-size: 20px;
+    font-weight: 400;
     margin-bottom: 20px;
     @include lg-min {
       font-size: 2.2rem;
@@ -15,10 +17,15 @@
   }
 
   .list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 5px;
     align-items: center;
     justify-content: center;
+    @include wrapper;
+    @include md-min {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 
   .navigation {
