--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,6 @@ $base-white: #ffffff;
 $dark-gray: #3a3939;
 $light-gray: #666;
 $red: #FF0000FF;
+$text-color: #000;
+$description-color: #787676;;
+$bg-color: #D9D9D9;
