--- a/src/frontend/components/consumers/Banner/Banner.module.css
+++ b/src/frontend/components/consumers/Banner/Banner.module.css
@@ -1,18 +1,30 @@
 .banner {
-  background-color: #D9D9D9;
+  background-color: #efefef;
+  padding-top: 33px;
+  padding-bottom: 49px;
 }
 .banner .wrapper {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   width: 100%;
+  min-width: 320px;
   margin: 0 auto;
-  max-width: 1400px;
-  width: 90%;
+  padding: 0 16px;
+}
+@media screen and (min-width: 576px) {
+  .banner .wrapper {
+    padding: 0 40px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .banner .wrapper {
+    max-width: 1400px;
+    padding: 0 60px;
+  }
 }
 @media screen and (min-width: 768px) {
   .banner .wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 40px;
-    padding: 60px 0;
   }
 }
 .banner .wrapper .image {
@@ -20,7 +32,6 @@
 }
 @media screen and (min-width: 768px) {
   .banner .wrapper .image {
-    flex: 1;
     display: block;
     object-fit: cover;
     height: 300px;
@@ -36,8 +47,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 49px;
-  margin-top: 33px;
 }
 .banner .wrapper .information .bannerTitle {
   color: #000;
