--- a/src/frontend/components/consumers/Banner/Banner.module.scss
+++ b/src/frontend/components/consumers/Banner/Banner.module.scss
@@ -4,21 +4,21 @@
 
 .banner {
   background-color: $bg-color;
-
+  padding-top: 33px;
+  padding-bottom: 49px;
   .wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
     @include wrapper;
+
     @include lg-min {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
       gap: 40px;
-      padding: 60px 0;
     }
 
     .image {
       display: none;
       @include lg-min {
-        flex: 1;
+        //flex: 1;
         display: block;
         object-fit: cover;
         height: 300px;
@@ -33,8 +33,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 49px;
-      margin-top: 33px;
 
       .bannerTitle {
         color: $text-color;
