--- a/src/frontend/pages/consumers/CardPage/CardPage.module.scss
+++ b/src/frontend/pages/consumers/CardPage/CardPage.module.scss
@@ -57,12 +57,15 @@
   }
 
   .button {
+    cursor: pointer;
+    width: 100%;
     color: $text-color;
     font-size: 20px;
     font-weight: 400;
     border-radius: 32px;
     background: $bg-color;
-    padding: 16px 65px;
+    padding: 16px 0;
+    text-align: center;
     margin-top: 13px;
     margin-bottom: 30px;
   }
@@ -100,5 +103,9 @@
       margin-bottom: 8px;
       margin-left: 20px;
     }
+  }
+
+  .productList {
+    margin-top: 30px;
   }
 }
