--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "responsive";
 
 @mixin fonts($family, $weight, $size, $color) {
   font-family: $family, sans-serif;
@@ -8,7 +9,15 @@
 }
 
 @mixin wrapper {
+  width: 100%;
+  min-width: 320px;
   margin: 0 auto;
-  max-width: 1400px;
-  width: 90%;
+  padding: 0 16px;
+  @include md-min {
+    padding: 0 40px;
+  }
+  @include xl-min {
+    max-width: 1400px;
+    padding: 0 60px;
+  }
 }
