--- a/src/global-styles/globals.css
+++ b/src/global-styles/globals.css
@@ -73,7 +73,7 @@ meter {
     -webkit-user-modify: read-write;
     overflow-wrap: break-word;
     -webkit-line-break: after-white-space;
-    line-break: after-white-space;
+    /*line-break: after-white-space;*/
     -webkit-user-select: auto;
     user-select: auto;
 }
