--- a/src/frontend/components/consumers/NavBar/NavBar.module.css
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   z-index: 10;
-  background-color: #efefef;
+  background-color: #ffffff;
   padding: 10px 0;
 }
 .navBar .content {
