--- a/src/frontend/components/consumers/NavBar/NavBar.module.scss
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   z-index: 10;
-  background-color: $bg-color;
+  background-color: $base-white;
   padding: 10px 0;
 
   .content {
