--- a/src/global-styles/globals.css
+++ b/src/global-styles/globals.css
@@ -7,6 +7,10 @@ body {
 
 }
 
+main{
+    min-height: 70vh;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -37,6 +41,7 @@ button {
 
 ol,
 ul,
+li,
 menu {
     list-style: none;
 }
