--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,9 @@
 $base-white: #ffffff;
 $dark-gray: #3a3939;
-$light-gray: #666;
+$light-gray: #949393;
 $red: #FF0000FF;
 $text-color: #000;
-$description-color: #787676;;
+$description-color: #787676;
 $bg-color: #efefef;
+$cart-item-bg: #D9D9D9;
+$measure-color: #929292;
