--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -18,10 +18,18 @@
       font-weight: 400;
     }
 
-    .price {
-      color: $text-color;
-      font-size: 12px;
-      font-weight: 400;
+    .priceContainer{
+      .price {
+        color: $text-color;
+        font-size: 12px;
+        font-weight: 400;
+      }
+      .unit {
+        color: $text-color;
+        font-size: 12px;
+        font-weight: 400;
+      }
     }
+
   }
 }
