fixed the path to the image, fixed image error

--- a/src/frontend/components/consumers/CartItem/CartItem.module.css
+++ b/src/frontend/components/consumers/CartItem/CartItem.module.css
@@ -51,6 +51,7 @@
 }
 .item .information .counter .amount .amountIconContainer .amountIcon {
   cursor: pointer;
+  object-fit: cover;
 }
 .item .information .counter .amount .amountIconContainer .amountIcon:hover {
   opacity: 0.5;
