--- a/src/frontend/components/consumers/CartItem/CartItem.module.scss
+++ b/src/frontend/components/consumers/CartItem/CartItem.module.scss
@@ -59,6 +59,7 @@
 
           .amountIcon {
             cursor: pointer;
+            object-fit: cover;
             &:hover {
               opacity: .5;
             }
