--- a/src/frontend/components/consumers/NavBar/NavBar.module.scss
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.scss
@@ -1,5 +1,6 @@
 @import "../../../../styles/responsive";
 @import "../../../../styles/mixins";
+@import "../../../../../src/styles/variables";
 
 .navBar {
   position: relative;
@@ -9,6 +10,10 @@
   z-index: 10;
   background-color: $base-white;
   padding: 10px 0;
+
+  img {
+    cursor: pointer;
+  }
 
   .content {
     display: flex;
@@ -35,7 +40,6 @@
         background-color: $base-white;
         min-width: 100vw;
         padding-top: 30px;
-
 
         .item {
           display: flex;
@@ -78,6 +82,40 @@
       }
     }
 
+    .search {
+      background-color: $base-white;
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      font-size: 16px;
+      justify-content: center;
+      left: 0;
+      top: 100%;
+      width: 100%;
+      @include cwd-min(420px) {
+        flex-direction: row;
+      }
+
+      input[type="text"] {
+        border-bottom: 1px solid #555;
+        display: inline-block;
+        margin: 1rem;
+        text-indent: 0.5em;
+      }
+
+      input[type="submit"] {
+        background-color: $bg-color;
+        border-radius: 1em;
+        cursor: pointer;
+        display: inline-block;
+        margin: 1rem;
+        padding: 0.5em 2em;
+        &:hover {
+          background-color: #2c742f;
+        }
+      }
+    }
+
     .logo {
       cursor: pointer;
       font-size: 24px;
@@ -85,5 +123,4 @@
       font-weight: 400;
     }
   }
-
 }
