--- a/src/global-styles/globals.css
+++ b/src/global-styles/globals.css
@@ -1,115 +1,122 @@
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Montserrat, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+  padding: 0;
+  margin: 0;
+  font-family:
+    Montserrat,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
-main{
-    min-height: 70vh;
+main {
+  min-height: 70vh;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*:where(
-    :not(html, iframe, canvas, img, svg, video, audio):not(svg , symbol )
-  ) {
-    all: unset;
-    display: revert;
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg, symbol)) {
+  all: unset;
+  display: revert;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a,
 button {
-    cursor: pointer;
-    outline: none;
+  cursor: pointer;
+  outline: none;
 }
 
 ol,
 ul,
 li,
 menu {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 input,
 textarea {
-    -webkit-user-select: auto;
-    user-select: auto;
+  -webkit-user-select: auto;
+  user-select: auto;
 }
 
 textarea {
-    white-space: revert;
+  white-space: revert;
 }
 
 meter {
-    -webkit-appearance: revert;
-    appearance: revert;
+  -webkit-appearance: revert;
+  appearance: revert;
 }
 
 ::placeholder {
-    color: unset;
+  color: unset;
 }
 
 :where([hidden]) {
-    display: none;
+  display: none;
 }
 
-:where([contenteditable]:not([contenteditable='false'])) {
-    -moz-user-modify: read-write;
-    -webkit-user-modify: read-write;
-    overflow-wrap: break-word;
-    -webkit-line-break: after-white-space;
-    /*line-break: after-white-space;*/
-    -webkit-user-select: auto;
-    user-select: auto;
+:where([contenteditable]:not([contenteditable="false"])) {
+  -moz-user-modify: read-write;
+  -webkit-user-modify: read-write;
+  overflow-wrap: break-word;
+  -webkit-line-break: after-white-space;
+  /*line-break: after-white-space;*/
+  -webkit-user-select: auto;
+  user-select: auto;
 }
 
-:where([draggable='true']) {
-    -webkit-user-drag: element;
+:where([draggable="true"]) {
+  -webkit-user-drag: element;
 }
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-    transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
+  width: 7px;
 }
 
 /*/ Track /*/
 ::-webkit-scrollbar-track {
-    background: transparent;
+  background: transparent;
 }
 
 /*/ Handle /*/
 ::-webkit-scrollbar-thumb {
-    background: #6b7c8a;
-    border-radius: 10px;
+  background: #6b7c8a;
+  border-radius: 10px;
 }
 
 /*/ Handle on hover /*/
 ::-webkit-scrollbar-thumb:hover {
-    background: #6b7c8a;
+  background: #6b7c8a;
 }
