--- a/src/frontend/components/consumers/Order/Order.module.scss
+++ b/src/frontend/components/consumers/Order/Order.module.scss
@@ -3,40 +3,33 @@
 @import "../../../../../src/styles/variables";
 
 .wrapper {
-  align-items: center;
-  background-color: #0005;
-  backdrop-filter: blur(2px);
-  display: flex;
-  min-height: 100%;
-  justify-content: center;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: 10;
+  @include wrapper;
+
+  .btnClose {
+    align-items: center;
+    background-color: $cart-item-bg;
+    border-radius: 1.3rem;
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: bold;
+    height: 2.6rem;
+    justify-content: center;
+    margin-left: auto;
+    width: 2.6rem;
+    &:hover {
+      background-color: #9d9b9b;
+    }
+  }
 
   .form {
     background-color: $base-white;
-    max-width: 400px;
+    display: grid;
+    margin: auto;
     padding: 1rem;
-    width: 90%;
-    z-index: 15;
-
-    .btnClose {
-      border: 2px solid $text-color;
-      align-items: center;
-      background-color: $cart-item-bg;
-      border-radius: 1.3rem;
-      display: flex;
-      font-size: 1.5rem;
-      font-weight: bold;
-      height: 2.6rem;
-      justify-content: center;
-      margin-left: auto;
-      width: 2.6rem;
-      &:hover {
-        background-color: #2c742f;
-      }
+    width: 100%;
+    @include lg-min {
+      gap: 1em;
+      grid-template-columns: repeat(3, 1fr);
     }
 
     .fieldset {
@@ -95,6 +88,10 @@
         height: 1rem;
         border: 1px solid #555;
         border-radius: 50%;
+
+        &:checked {
+          background: radial-gradient(#555 50%, #fff 50%);
+        }
       }
     }
     .btnOrder {
