--- a/src/frontend/components/consumers/Order/Order.module.scss
+++ b/src/frontend/components/consumers/Order/Order.module.scss
@@ -104,9 +104,13 @@
       font-weight: 400;
       border-radius: 16px;
       margin: 9px 0;
+      @include lg-min {
+        grid-column: 2/3;
+      }
 
       &:hover {
         background-color: #2c742f;
+        cursor: pointer;
       }
     }
   }
