--- a/src/frontend/pages/consumers/CartPage/CartPage.module.scss
+++ b/src/frontend/pages/consumers/CartPage/CartPage.module.scss
@@ -2,82 +2,21 @@
 @import "../../../../../src/styles/mixins";
 @import "../../../../../src/styles/responsive";
 
-.back {
-  @include wrapper;
-  .arrow {
-    align-items: center;
-    background-color: $cart-item-bg;
-    border-radius: 1.3rem;
-    display: flex;
-    font-size: 1.5rem;
-    font-weight: bold;
-    height: 2.6rem;
-    justify-content: center;
-    margin: 1em 0;
-    width: 2.6rem;
-    &:hover {
-      background-color: #9d9b9b;
-    }
-  }
-}
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 
-.cartPage {
-  display: grid;
-  gap: 2em;
-  @include wrapper;
-  @include md-min {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include lg-min {
-    grid-template-columns: repeat(3, 1fr);
+  .productsWrapper {
+    flex: 1 1 auto;
   }
 
-  .warning {
-    text-align: center;
-    margin: 30px 0;
-  }
-
-  .cartItem {
-    position: relative;
-
-    .deleteIcon {
-      cursor: pointer;
-      position: absolute;
-      top: 19px;
-      right: 10px;
-
-      &:hover {
-        opacity: 0.5;
-      }
-    }
-  }
-}
-
-.cartFooter {
-  margin-top: 1em;
-  background-color: $cart-item-bg;
-  padding-top: 10px;
-  padding-bottom: 21px;
-
-  .order {
+  .price {
     @include wrapper;
-
-    .headline {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 14px;
-      align-items: center;
-      .caption {
-        color: $text-color;
-        font-size: 14px;
-      }
-
-      .sum {
-        color: $text-color;
-        font-size: 16px;
-        font-weight: 500;
-      }
-    }
+    background-color: $cart-item-bg;
+    margin-top: 1rem;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
 
     .button {
       width: 100%;
