--- a/src/frontend/components/consumers/OrderPage/Header/Header.module.scss
+++ b/src/frontend/components/consumers/OrderPage/Header/Header.module.scss
@@ -10,24 +10,9 @@
   margin-bottom: 1rem;
   margin-top: 1rem;
 
-  .btnBack {
-    align-items: center;
-    background-color: $cart-item-bg;
-    border-radius: 1.3rem;
-    display: flex;
-    font-size: 1.5rem;
-    font-weight: bold;
-    height: 2.6rem;
-    justify-content: center;
-    width: 2.6rem;
-    &:hover {
-      background-color: #9d9b9b;
-    }
-  }
-
   .title {
     font-size: 1.5rem;
-    margin: 0 2rem;
+    margin-right: 2em;
     @include lg-min {
       font-size: 2.5rem;
     }
